Book entitysinin endpointleri hazırlandı

--- a/IKitaplik.Api/appsettings.json
+++ b/IKitaplik.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "conStringLocal": "Server=.\\SQLEXPRESS;Database=IKitaplikDB;Trusted_Connection=True;"
+    "conStringLocal": "Server=.\\SQLEXPRESS;Database=IKitaplikDB;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
