--- a/IKitaplik.Api/appsettings.json
+++ b/IKitaplik.Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "conStringLocal": "Server=.\\SQLEXPRESS;Database=IKitaplikDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "conStringLocal": "Server=.\\SQLEXPRESS;Database=IKitaplikDB;Trusted_Connection=True;TrustServerCertificate=True;",
+    "conString": "Server=45.84.189.34\\MSSQLSERVER2022;Database=hamzairm_kutuphane;User Id=hamzairm_hamzairm_;Password=46hamza27TR!;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
