--- a/IKitaplik.Api/appsettings.json
+++ b/IKitaplik.Api/appsettings.json
@@ -9,5 +9,10 @@
     "conStringLocal": "Server=.\\SQLEXPRESS;Database=IKitaplikDB;Trusted_Connection=True;TrustServerCertificate=True;",
     "conString": "Server=45.84.189.34\\MSSQLSERVER2022;Database=hamzairm_kutuphane;User Id=hamzairm_hamzairm_;Password=46hamza27TR!;TrustServerCertificate=True;"
   },
+  "Jwt": {
+    "Key": "your_super_secret_key_123456123456",
+    "Issuer": "myapi.com",
+    "Audience": "myapi.com"
+  },
   "AllowedHosts": "*"
 }
