--- a/IKitaplik.BlazorUI/IKitaplik.BlazorUI.csproj
+++ b/IKitaplik.BlazorUI/IKitaplik.BlazorUI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.5" />
     <PackageReference Include="MudBlazor" Version="8.8.0" />
   </ItemGroup>
 
